--- a/index.html
+++ b/index.html
@@ -97,30 +97,32 @@
                 </div>
             </div>
             <div class="main__bottom">
-                <div class="swiper-container b-center">
-                    <div class="swiper-wrapper">
-                        <div class="swiper-slide">
-                            <span>01</span>
-                            <p>Вы оставляете заявку, мы выбираем удобный день для осмотра и замеров офиса.</p>
-                        </div>
-                        <div class="swiper-slide">
-                            <span>02</span>
-                            <p>Наши специалисты приезжают в удобный день и делают замеры, после чего фиксируем смету и подписываем договор.</p>
-                        </div>
-                        <div class="swiper-slide">
-                            <span>03</span>
-                            <p>Начинаем работать с контролем качества, отчитываемся о прогрессе, завершаем ремонтные работы точно в срок.</p>
-                        </div>
-                        <div class="swiper-slide">
-                            <span>04</span>
-                            <p>Вы с удовольствием принимаете работу, рекомендуете нам друзьям, обращаетесь для ремонта других офисов.</p>
-                        </div>
-                    </div>
-                    <div class="swiper-pagination"></div>
-                    <div class="main__bottom__control">
-                        <div class="swiper-button-next"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="11" viewBox="0 0 16 11"><path d="M16 2.89L14.13.998 8 7.214 1.87.998 0 2.89 8 11z"/></svg></div>
-                        <div class="swiper-button-prev"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="11" viewBox="0 0 16 11"><path d="M16 2.89L14.13.998 8 7.214 1.87.998 0 2.89 8 11z"/></svg></div>
-                    </div>
+                <div class="b-center">
+                	<div class="swiper-container">
+                	    <div class="swiper-wrapper">
+                	        <div class="swiper-slide">
+                	            <span>01</span>
+                	            <p>Вы оставляете заявку, мы выбираем удобный день для осмотра и замеров офиса.</p>
+                	        </div>
+                	        <div class="swiper-slide">
+                	            <span>02</span>
+                	            <p>Наши специалисты приезжают в удобный день и делают замеры, после чего фиксируем смету и подписываем договор.</p>
+                	        </div>
+                	        <div class="swiper-slide">
+                	            <span>03</span>
+                	            <p>Начинаем работать с контролем качества, отчитываемся о прогрессе, завершаем ремонтные работы точно в срок.</p>
+                	        </div>
+                	        <div class="swiper-slide">
+                	            <span>04</span>
+                	            <p>Вы с удовольствием принимаете работу, рекомендуете нам друзьям, обращаетесь для ремонта других офисов.</p>
+                	        </div>
+                	    </div>
+                	    <div class="swiper-pagination"></div>
+                	    <div class="main__bottom__control">
+                	        <div class="swiper-button-next"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="11" viewBox="0 0 16 11"><path d="M16 2.89L14.13.998 8 7.214 1.87.998 0 2.89 8 11z"/></svg></div>
+                	        <div class="swiper-button-prev"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="11" viewBox="0 0 16 11"><path d="M16 2.89L14.13.998 8 7.214 1.87.998 0 2.89 8 11z"/></svg></div>
+                	    </div>
+                	</div>
                 </div>
             </div>
         </section>
@@ -301,14 +303,11 @@
                     <div class="objects__item">
                         <div class="objects__left swiper-container">
                             <div class="swiper-wrapper">
-                                <div class="swiper-slide">
-                                    <img src="images/objects/object-1.jpg" alt="">
+                                <div class="swiper-slide" style="background-image: url('images/objects/object-1.jpg')">
                                 </div>
-                                <div class="swiper-slide">
-                                    <img src="images/objects/object-1.jpg" alt="">
+                                <div class="swiper-slide" style="background-image: url('images/objects/object-1.jpg')">
                                 </div>
-                                <div class="swiper-slide">
-                                    <img src="images/objects/object-1.jpg" alt="">
+                                <div class="swiper-slide" style="background-image: url('images/objects/object-1.jpg')">
                                 </div>
                             </div>
                             <div class="swiper-button-next"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="11" viewBox="0 0 16 11"><path d="M16 2.89L14.13.998 8 7.214 1.87.998 0 2.89 8 11z"/></svg></div>
@@ -339,14 +338,11 @@
                     <div class="objects__item">
                         <div class="objects__left swiper-container">
                             <div class="swiper-wrapper">
-                                <div class="swiper-slide">
-                                    <img src="images/objects/object-1.jpg" alt="">
+                                <div class="swiper-slide" style="background-image: url('images/objects/object-1.jpg')">
                                 </div>
-                                <div class="swiper-slide">
-                                    <img src="images/objects/object-1.jpg" alt="">
+                                <div class="swiper-slide" style="background-image: url('images/objects/object-1.jpg')">
                                 </div>
-                                <div class="swiper-slide">
-                                    <img src="images/objects/object-1.jpg" alt="">
+                                <div class="swiper-slide" style="background-image: url('images/objects/object-1.jpg')">
                                 </div>
                             </div>
                             <div class="swiper-button-next"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="11" viewBox="0 0 16 11"><path d="M16 2.89L14.13.998 8 7.214 1.87.998 0 2.89 8 11z"/></svg></div>
@@ -377,14 +373,11 @@
                     <div class="objects__item disabled">
                         <div class="objects__left swiper-container">
                             <div class="swiper-wrapper">
-                                <div class="swiper-slide">
-                                    <img src="images/objects/object-1.jpg" alt="">
+                                <div class="swiper-slide" style="background-image: url('images/objects/object-1.jpg')">
                                 </div>
-                                <div class="swiper-slide">
-                                    <img src="images/objects/object-1.jpg" alt="">
+                                <div class="swiper-slide" style="background-image: url('images/objects/object-1.jpg')">
                                 </div>
-                                <div class="swiper-slide">
-                                    <img src="images/objects/object-1.jpg" alt="">
+                                <div class="swiper-slide" style="background-image: url('images/objects/object-1.jpg')">
                                 </div>
                             </div>
                             <div class="swiper-button-next"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="11" viewBox="0 0 16 11"><path d="M16 2.89L14.13.998 8 7.214 1.87.998 0 2.89 8 11z"/></svg></div>
@@ -415,14 +408,11 @@
                     <div class="objects__item disabled">
                         <div class="objects__left swiper-container">
                             <div class="swiper-wrapper">
-                                <div class="swiper-slide">
-                                    <img src="images/objects/object-1.jpg" alt="">
+                                <div class="swiper-slide" style="background-image: url('images/objects/object-1.jpg')">
                                 </div>
-                                <div class="swiper-slide">
-                                    <img src="images/objects/object-1.jpg" alt="">
+                                <div class="swiper-slide" style="background-image: url('images/objects/object-1.jpg')">
                                 </div>
-                                <div class="swiper-slide">
-                                    <img src="images/objects/object-1.jpg" alt="">
+                                <div class="swiper-slide" style="background-image: url('images/objects/object-1.jpg')">
                                 </div>
                             </div>
                             <div class="swiper-button-next"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="11" viewBox="0 0 16 11"><path d="M16 2.89L14.13.998 8 7.214 1.87.998 0 2.89 8 11z"/></svg></div>
@@ -453,14 +443,11 @@
                     <div class="objects__item disabled">
                         <div class="objects__left swiper-container">
                             <div class="swiper-wrapper">
-                                <div class="swiper-slide">
-                                    <img src="images/objects/object-1.jpg" alt="">
+                                <div class="swiper-slide" style="background-image: url('images/objects/object-1.jpg')">
                                 </div>
-                                <div class="swiper-slide">
-                                    <img src="images/objects/object-1.jpg" alt="">
+                                <div class="swiper-slide" style="background-image: url('images/objects/object-1.jpg')">
                                 </div>
-                                <div class="swiper-slide">
-                                    <img src="images/objects/object-1.jpg" alt="">
+                                <div class="swiper-slide" style="background-image: url('images/objects/object-1.jpg')">
                                 </div>
                             </div>
                             <div class="swiper-button-next"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="11" viewBox="0 0 16 11"><path d="M16 2.89L14.13.998 8 7.214 1.87.998 0 2.89 8 11z"/></svg></div>
@@ -491,14 +478,11 @@
                     <div class="objects__item disabled">
                         <div class="objects__left swiper-container">
                             <div class="swiper-wrapper">
-                                <div class="swiper-slide">
-                                    <img src="images/objects/object-1.jpg" alt="">
+                                <div class="swiper-slide" style="background-image: url('images/objects/object-1.jpg')">
                                 </div>
-                                <div class="swiper-slide">
-                                    <img src="images/objects/object-1.jpg" alt="">
+                                <div class="swiper-slide" style="background-image: url('images/objects/object-1.jpg')">
                                 </div>
-                                <div class="swiper-slide">
-                                    <img src="images/objects/object-1.jpg" alt="">
+                                <div class="swiper-slide" style="background-image: url('images/objects/object-1.jpg')">
                                 </div>
                             </div>
                             <div class="swiper-button-next"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="11" viewBox="0 0 16 11"><path d="M16 2.89L14.13.998 8 7.214 1.87.998 0 2.89 8 11z"/></svg></div>
@@ -534,11 +518,11 @@
         <section class="offers">
             <div class="b-center">
                 <h2 class="caption">Продумали все <b>до мелочей</b></h2>
-                <p class="sub_caption">Перечень наших услуг включает весь комплекс работ, необходимых для качественного и оперативного ремонта офисных помещений. Наш коллектив своими силами делает все – от визуализации дизайн­проекта до поставок материалов и авторского надзора.</p>
+                <p class="sub_caption">Перечень наших услуг включает весь комплекс работ, необходимых для качественного и оперативного ремонта офисных помещений. Наш коллектив своими силами делает все – от визуализации дизайн проекта до поставок материалов и авторского надзора.</p>
                 <h3 class="offers__title">Наши основные предложения:</h3>
                 <div class="offers__items">
                     <div class="offers__item">
-                        <div class="offers__image"><img src="images/offers/offers-img-1.jpg" alt=""></div>
+                        <div class="offers__image" style="background-image:url('images/offers/offers-img-1.jpg')"></div>
                         <div class="offers__info">
                             <h4 class="offers__name">Косметический ремонт</h4>
                             <p class="offers__desc">Наиболее доступный в ценовом отношении вариант улучшения интерьера офиса с использованием качественных, но недорогих отделочных материалов</p>
@@ -548,7 +532,7 @@
                         </div>
                     </div>
                     <div class="offers__item">
-                        <div class="offers__image"><img src="images/offers/offers-img-1.jpg" alt=""></div>
+                        <div class="offers__image" style="background-image:url('images/offers/offers-img-1.jpg')"></div>
                         <div class="offers__info">
                             <h4 class="offers__name">Капитальный ремонт</h4>
                             <p class="offers__desc">Качественный комплексный ремонт офиса с обязательным выравниванием поверхностей, электромонтажными, сантехническими и отделочными работами.</p>
@@ -558,7 +542,7 @@
                         </div>
                     </div>
                     <div class="offers__item">
-                        <div class="offers__image"><img src="images/offers/offers-img-1.jpg" alt=""></div>
+                        <div class="offers__image" style="background-image:url('images/offers/offers-img-1.jpg')"></div>
                         <div class="offers__info">
                             <h4 class="offers__name">Эксклюзивный ремонт</h4>
                             <p class="offers__desc">Комплексный ремонт класса «Премиум» с применением элитарных материалов и сложных технологий.</p>
@@ -1014,11 +998,13 @@
             <div class="b-center">
                 <h2 class="caption"><b>“Резиденция”:</b> воплотим вашу идею в жизнь</h2>
                 <div class="about__body">
-                	<div class="about__left"><img src="images/about-img.jpg" alt=""></div>
-                	<div class="about__right">
-                	    <p><b>Строительная компания «Резиденция»</b> специализируется на комплексном ремонте помещений любого назначения. В наш коллектив входят архитекторы, проектировщики, дизайнеры, инженеры, сметчики, а также дюжина бригад, в каждой из которых работают по десятки специалистов. Это позволяет нам оперативно выполнять даже самые сложные задания клиентов, <b>гарантируя отличные результаты.</b></p>
-                	    <p>Мы постоянно отслеживаем мировые тенденции и готовы первыми в стране предлагать своим заказчикам <b>самые трендовые решения,</b> применять новейшие технологии и прогрессивные новинки рынка строительных и отделочных материалов.</p>
-                	    <p><b>Репутация для нас — не пустой звук:</b> мы работаем так, чтобы гордится каждым маленьким шагом, и нам это успешно удается!</p>
+                	<div class="about__wrp">
+                		<div class="about__left"><img src="images/about-img.jpg" alt=""></div>
+                		<div class="about__right">
+                		    <p><b>Строительная компания «Резиденция»</b> специализируется на комплексном ремонте помещений любого назначения. В наш коллектив входят архитекторы, проектировщики, дизайнеры, инженеры, сметчики, а также дюжина бригад, в каждой из которых работают по десятки специалистов. Это позволяет нам оперативно выполнять даже самые сложные задания клиентов, <b>гарантируя отличные результаты.</b></p>
+                		    <p>Мы постоянно отслеживаем мировые тенденции и готовы первыми в стране предлагать своим заказчикам <b>самые трендовые решения,</b> применять новейшие технологии и прогрессивные новинки рынка строительных и отделочных материалов.</p>
+                		    <p><b>Репутация для нас — не пустой звук:</b> мы работаем так, чтобы гордится каждым маленьким шагом, и нам это успешно удается!</p>
+                		</div>
                 	</div>
                 	<div class="about__bottom">
                 	    <div class="about__item">
