--- a/index.html
+++ b/index.html
@@ -996,7 +996,7 @@
 
         <section class="about">
             <div class="b-center">
-                <h2 class="caption"><b>“Резиденция”:</b> воплотим вашу идею в жизнь</h2>
+                <h2 class="caption"><b>“Резиденция”:</b> <span>воплотим вашу идею в жизнь</span></h2>
                 <div class="about__body">
                 	<div class="about__wrp">
                 		<div class="about__left"><img src="images/about-img.jpg" alt=""></div>
@@ -1037,26 +1037,28 @@
         </section>
 
         <section class="advantages b-center">
-            <div class="advantages__item">
-                <em>
-                    <span>12</span>
-                    <span>бригад</span>
-                </em>
-                <p>Опытных специалистов с многолетним опытом ремонтных работ</p>
-            </div>
-            <div class="advantages__item">
-                <em>
-                    <span>40</span>
-                    <span>специалистов</span>
-                </em>
-                <p>Разных специальностей входят в одну рабочую бригаду</p>
-            </div>
-            <div class="advantages__item">
-                <em>
-                    <span>1</span>
-                    <span>звонка</span>
-                </em>
-                <p>Достаточно для обсуждения всех нюансов и начала сотрудничества</p>
+            <div class="advantages__items">
+            	<div class="advantages__item">
+            	    <em>
+            	        <span>12</span>
+            	        <span>бригад</span>
+            	    </em>
+            	    <p>Опытных специалистов с многолетним опытом ремонтных работ</p>
+            	</div>
+            	<div class="advantages__item">
+            	    <em>
+            	        <span>40</span>
+            	        <span>специалистов</span>
+            	    </em>
+            	    <p>Разных специальностей входят в одну рабочую бригаду</p>
+            	</div>
+            	<div class="advantages__item">
+            	    <em>
+            	        <span>1</span>
+            	        <span>звонка</span>
+            	    </em>
+            	    <p>Достаточно для обсуждения всех нюансов и начала сотрудничества</p>
+            	</div>
             </div>
         </section>
 
