добавил meta viewport

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <title>Document</title>
         <meta name="keywords" content="document" />
         <meta name="description" content="document" />
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <!-- Favicon -->
         <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
         <link rel="shortcut icon" href='images/Favicon_144x144.png'>
